!A isloggedin
